--- a/ToolsIgnota.UI/ToolsIgnota.UI/UserControls/InitiativeRecord.xaml
+++ b/ToolsIgnota.UI/ToolsIgnota.UI/UserControls/InitiativeRecord.xaml
@@ -1,13 +1,14 @@
 ﻿<UserControl
-    x:Class="ToolsIgnota.UI.InitiativeRecord"
+    x:Class="ToolsIgnota.UI.UserControls.InitiativeRecord"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:ToolsIgnota.UI"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid>
-
-    </Grid>
+    <Border Name="outline" BorderBrush="Goldenrod" CornerRadius="10000">
+        <PersonPicture Name="picture">
+            
+        </PersonPicture>
+    </Border>
 </UserControl>
