--- a/ToolsIgnota.UI/ToolsIgnota.UI/Windows/MainWindow.xaml
+++ b/ToolsIgnota.UI/ToolsIgnota.UI/Windows/MainWindow.xaml
@@ -1,13 +1,23 @@
 ﻿<Window
-    x:Class="ToolsIgnota.UI.MainWindow"
+    x:Class="ToolsIgnota.UI.Windows.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:ToolsIgnota.UI"
+    xmlns:uc="using:ToolsIgnota.UI.UserControls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="20">
         <Button x:Name="myButton" Click="myButton_Click">Click Me</Button>
+        <uc:InitiativeRecord 
+            Image="C:\Users\rjshe\source\repos\ToolsIgnota\ToolsIgnota.UI\ToolsIgnota.UI\Assets\Emmyth_Icon.png"
+            DisplayName="Emmyth Virrieth"
+            IsHighlighted="True">
+        </uc:InitiativeRecord>
+        <uc:InitiativeRecord 
+            Image="C:\Users\rjshe\source\repos\ToolsIgnota\ToolsIgnota.UI\ToolsIgnota.UI\Assets\Alexander_Icon.png"
+            DisplayName="Alexander Hannay"
+            IsHighlighted="False">
+        </uc:InitiativeRecord>
     </StackPanel>
 </Window>
