mvvm help aaaah

--- a/ToolsIgnota.UI/ToolsIgnota.UI/Views/UserControls/CreatureImageEntry.xaml
+++ b/ToolsIgnota.UI/ToolsIgnota.UI/Views/UserControls/CreatureImageEntry.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="ToolsIgnota.UI.UserControls.CreatureImageEntry"
+    x:Class="ToolsIgnota.UI.Views.UserControls.CreatureImageEntry"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:ToolsIgnota.UI.UserControls"
