--- a/ToolsIgnota.UI/ToolsIgnota.UI/Views/UserControls/InitiativeRecord.xaml
+++ b/ToolsIgnota.UI/ToolsIgnota.UI/Views/UserControls/InitiativeRecord.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="ToolsIgnota.UI.UserControls.InitiativeRecord"
+    x:Class="ToolsIgnota.UI.Views.UserControls.InitiativeRecord"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
