--- a/ToolsIgnota.UI/ToolsIgnota.UI/Views/Windows/MainWindow.xaml
+++ b/ToolsIgnota.UI/ToolsIgnota.UI/Views/Windows/MainWindow.xaml
@@ -1,5 +1,5 @@
 ﻿<Window
-    x:Class="ToolsIgnota.UI.Windows.MainWindow"
+    x:Class="ToolsIgnota.UI.Views.Windows.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:uc="using:ToolsIgnota.UI.UserControls"
