Combat Manager settings and connection logic

--- a/ToolsIgnota/Styles/Thickness.xaml
+++ b/ToolsIgnota/Styles/Thickness.xaml
@@ -19,6 +19,8 @@
     <Thickness x:Key="XSmallLeftMargin">8,0,0,0</Thickness>
     <Thickness x:Key="XSmallTopMargin">0,8,0,0</Thickness>
     <Thickness x:Key="XSmallLeftTopRightBottomMargin">8,8,8,8</Thickness>
+    
+    <Thickness x:Key="AlignWithTextBoxTopMargin">0,5,0,0</Thickness>
 
     <Thickness x:Key="XXSmallTopMargin">0,4,0,0</Thickness>
     <Thickness x:Key="XXSmallLeftTopRightBottomMargin">4,4,4,4</Thickness>
@@ -32,5 +34,5 @@
     <Thickness x:Key="MenuBarContentMargin">36,24,36,0</Thickness>
 
     <Thickness x:Key="SettingsPageHyperlinkButtonMargin">-12,4,0,0</Thickness>
-    
+
 </ResourceDictionary>
