--- a/ToolsIgnota/Views/ControlImagesPage.xaml
+++ b/ToolsIgnota/Views/ControlImagesPage.xaml
@@ -1,11 +1,18 @@
 ﻿<Page
-    x:Class="ToolsIgnota.Views.InitiativeControlPage"
+    x:Class="ToolsIgnota.Views.ControlImagesPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
+    <!-- 
+    1. Set Background Image 
+    2. Show Character Art
+    3. Set Initiative Tracker Art
+    4. Display Effects
+    5. Image Zoom?
+    -->
     <Grid x:Name="ContentArea">
         
     </Grid>
