--- a/ToolsIgnota/Views/ShellPage.xaml
+++ b/ToolsIgnota/Views/ShellPage.xaml
@@ -7,6 +7,7 @@
     xmlns:helpers="using:ToolsIgnota.Helpers"
     xmlns:behaviors="using:ToolsIgnota.Behaviors"
     xmlns:i="using:Microsoft.Xaml.Interactivity"
+    xmlns:ui="using:CommunityToolkit.WinUI.UI"
     Loaded="OnLoaded">
 
     <Grid>
@@ -36,17 +37,11 @@
             DisplayModeChanged="NavigationViewControl_DisplayModeChanged"
             Header="{x:Bind ((ContentControl)ViewModel.Selected).Content, Mode=OneWay}">
             <NavigationView.MenuItems>
-                <!--
-                TODO: Update item titles by updating <x:Uid>.Content entries in Strings/en-us/Resources.resw.
-                https://docs.microsoft.com/windows/uwp/app-resources/localize-strings-ui-manifest#refer-to-a-string-resource-identifier-from-xaml
-            
-                TODO: Update item icons by updating FontIcon.Glyph properties.
-                https://docs.microsoft.com/windows/apps/design/style/segoe-fluent-icons-font#icon-list
-                -->
-                <NavigationViewItem x:Uid="Shell_InitiativeControl" helpers:NavigationHelper.NavigateTo="ToolsIgnota.ViewModels.InitiativeControlViewModel">
-                    <NavigationViewItem.Icon>
-                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xe7c3;"/>
-                    </NavigationViewItem.Icon>
+                <NavigationViewItem x:Uid="Shell_DisplayControl" Icon="{ui:FontIcon Glyph=&#xE7F4;}" SelectsOnInvoked="False">
+                    <NavigationViewItem.MenuItems>
+                        <NavigationViewItem x:Uid="Shell_ControlImages" Icon="{ui:FontIcon Glyph=&#xE8B9;}" helpers:NavigationHelper.NavigateTo="ToolsIgnota.ViewModels.ControlImagesViewModel"/>
+                        <NavigationViewItem x:Uid="Shell_ControlInitiative" Icon="{ui:FontIcon Glyph=&#xE716;}" helpers:NavigationHelper.NavigateTo="ToolsIgnota.ViewModels.ControlInitiativeViewModel"/>
+                    </NavigationViewItem.MenuItems>
                 </NavigationViewItem>
             </NavigationView.MenuItems>
             <NavigationView.HeaderTemplate>
