--- a/ToolsIgnota/Views/Pages/ShellPage.xaml
+++ b/ToolsIgnota/Views/Pages/ShellPage.xaml
@@ -33,7 +33,7 @@
             IsBackEnabled="{x:Bind ViewModel.IsBackEnabled, Mode=OneWay}"
             SelectedItem="{x:Bind ViewModel.Selected, Mode=OneWay}"
             IsSettingsVisible="True"
-            ExpandedModeThresholdWidth="1280"
+            ExpandedModeThresholdWidth="900"
             DisplayModeChanged="NavigationViewControl_DisplayModeChanged"
             Header="{x:Bind ((ContentControl)ViewModel.Selected).Content, Mode=OneWay}">
             <NavigationView.MenuItems>
@@ -68,7 +68,9 @@
                 </behaviors:NavigationViewHeaderBehavior>
             </i:Interaction.Behaviors>
             <Grid Margin="{StaticResource NavigationViewPageContentMargin}">
-                <Frame x:Name="NavigationFrame" />
+                <ScrollViewer>
+                    <Frame x:Name="NavigationFrame" />
+                </ScrollViewer>
             </Grid>
         </NavigationView>
     </Grid>
