--- a/ToolsIgnota/App.xaml
+++ b/ToolsIgnota/App.xaml
@@ -10,6 +10,7 @@
                 <ResourceDictionary Source="/Styles/Thickness.xaml" />
                 <ResourceDictionary Source="/Styles/TextBlock.xaml" />
                 <ResourceDictionary Source="/Styles/Spacings.xaml" />
+                <ResourceDictionary Source="/Styles/InitiativeDisplay.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <SolidColorBrush x:Key="WindowCaptionBackground">Transparent</SolidColorBrush>
             <SolidColorBrush x:Key="WindowCaptionBackgroundDisabled">Transparent</SolidColorBrush>
